<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.80"
        android:orientation="horizontal" />

    <View
        android:id="@+id/colorView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@+id/layoutButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp" />

    <!-- BOTONES DE COLORES -->
    <GridLayout
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/colorView"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnRed"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:textSize="18sp"
            android:text="@string/btnRed"
            android:backgroundTint="@color/red"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:textSize="18sp"
            android:text="@string/btnGreen"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:textSize="18sp"
            android:text="@string/btnBlue"
            android:backgroundTint="@color/blue"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnYellow"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:textSize="18sp"
            android:text="@string/btnYellow"
            android:backgroundTint="@color/yellow"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btnBlack"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:textSize="18sp"
            android:text="@string/btnBlack"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btnWhite"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:textSize="18sp"
            android:text="@string/btnWhite"
            android:backgroundTint="@color/white"
            android:textColor="@android:color/black"/>
    </GridLayout>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvScore"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTimer"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>
